Eliminar node_modules y mejorar errores OpenAPI
